--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.shettyharshith33.vcputtur">
+    package="com.sharathkolpe.gootoo">
 
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name="com.shettyharshith33.BaseApplication"
+        android:name="com.sharathkolpe.BaseApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/newapplogo"
-        android:label="@string/app_name"
+        android:label="Gootoo"
         android:supportsRtl="true"
-        android:theme="@style/Theme.VCPuttur"
+        android:theme="@style/Theme.Gootoo"
         tools:targetApi="31">
         <activity
-            android:name="com.shettyharshith33.firebaseAuth.AuthActivity"
+            android:name="com.sharathkolpe.firebaseAuth.AuthActivity"
             android:screenOrientation="portrait"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.VCPuttur">
+            android:theme="@style/Theme.Gootoo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
