--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 accompanistPager = "0.30.1"
+accompanistPlaceholderMaterial = "0.32.0"
 accompanistPlaceholderMaterial3 = "0.34.0"
 accompanistSwiperefresh = "<latest_version>"
 accompanistSwiperefreshVersion = "0.28.0"
@@ -9,7 +10,9 @@ androidxMaterial3 = "1.0.0"
 coilCompose = "2.6.0"
 comGoogleDaggerHiltAndroidGradlePlugin = "2.55"
 composeShimmer = "1.3.2"
+coreSplashscreen = "1.0.1"
 datastorePreferences = "1.1.5"
+datastorePreferencesVersion = "1.0.0"
 firebaseAuth = "23.2.0"
 firebaseBom = "33.8.0"
 firebaseBomVersion = "32.7.2"
@@ -47,12 +50,15 @@ runtimeLivedata = "1.7.7"
 
 [libraries]
 accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanistPager" }
+accompanist-placeholder-material = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanistPlaceholderMaterial" }
 accompanist-placeholder-material3 = { module = "com.google.accompanist:accompanist-placeholder-material3", version.ref = "accompanistPlaceholderMaterial3" }
 accompanist-swiperefresh = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanistSwiperefresh" }
 accompanist-swiperefresh-v0280 = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanistSwiperefreshVersion" }
 accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanistSystemuicontroller" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+androidx-datastore-preferences-v100 = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferencesVersion" }
 androidx-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
