Refactor: Integrate Firebase Phone Auth and update dependencies
This commit introduces Firebase Phone Authentication functionality, replacing the previous OTP implementation. Key changes include:

- Added `OtpRequestPage.kt` and `OtpVerificationPage.kt` to handle phone number input and OTP verification respectively.
- Updated `BeforeLoginScreensNavigation.kt` to include navigation routes for the new OTP flow.
- Configured Firebase App Check with Play Integrity in `AuthActivity.kt`.
- Updated Firebase BOM and other relevant dependencies in `build.gradle.kts` and `libs.versions.toml`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ firebaseBom = "33.8.0"
 firebaseBomVersion = "32.7.2"
 foundation = "1.8.1"
 googleFirebaseBom = "32.7.1"
+googleFirebaseBomVersion = "33.16.0"
 googleHiltAndroidGradlePlugin = "2.44"
 googleHiltAndroidGradlePluginVersion = "2.38.1"
 hiltAndroid = "2.51.1"
@@ -75,6 +76,7 @@ firebase-appcheck-playintegrity = { module = "com.google.firebase:firebase-appch
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-bom-v3272 = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBomVersion" }
+firebase-bom-v33160 = { module = "com.google.firebase:firebase-bom", version.ref = "googleFirebaseBomVersion" }
 firebase-dynamic-links-ktx = { module = "com.google.firebase:firebase-dynamic-links-ktx" }
 firebase-firestore = { module = "com.google.firebase:firebase-firestore" }
 google-accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller" }
